<resources>
    <string name="app_name">My Application</string>
    <string name="txtName">Name:</string>
    <string name="txtEmail">Email:</string>
    <string name="editName">Tên</string>
    <string name="editEmail">Email</string>
    <string name="txtCheckBoxTitle">Hobbies</string>
    <string name="chkReading">Học</string>
    <string name="chkTravelling">Chơi</string>
    <string name="chkCoding">Khác...</string>
    <string name="rdMale">Nam</string>
    <string name="rdFemale">Nữ</string>
    <string name="txtSex">Sex</string>
    <string name="txtLan">Languages</string>
    <string-array name="lan_array">
        <item>VietNamese</item>
        <item>English</item>
        <item>French</item>
        <item>Chinese</item>
    </string-array>
    <string name="txtexpert">Bạn đã từng chơi game tương tự chưa?</string>
    <string name="txtBirthday">Birthday</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnInfo">OK</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="todo">TODO</string>
</resources>
